--- a/0203project/src/app/first/first.component.html
+++ b/0203project/src/app/first/first.component.html
@@ -6,6 +6,6 @@
 <input type="text" [(ngModel)]="account">
 
 <label for="">密碼</label>
-<input type="number"[(ngModel)]="password">
+<input type="password"[(ngModel)]="password">
 
 <button (click)="sendData()">送出資料</button>
