--- a/src/app/@compoment/api-demo3/api-demo3.component.html
+++ b/src/app/@compoment/api-demo3/api-demo3.component.html
@@ -1,6 +1,6 @@
 <div class="background">
 <div class="block1">
-<label class="CYA">Choose your area:</label>
+<label class="CYA">Choose your AREA:</label>
 
 <br>
 
