--- a/src/app/@compoment/api-demo3/api-demo3.component.scss
+++ b/src/app/@compoment/api-demo3/api-demo3.component.scss
@@ -7,7 +7,7 @@
   padding: 5px;
   color: #ffddf4;
   margin: 10px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .card{
