--- a/src/app/@compoment/api-demo3/api-demo3.component.scss
+++ b/src/app/@compoment/api-demo3/api-demo3.component.scss
@@ -2,8 +2,8 @@
 //   background-color:rgb(102, 69, 248);
 // }
 .CYA{
-  font-size: 23px;
-  font-weight: bold;
+  font-size: 26px;
+  // font-weight: bold;
   padding: 5px;
   color: #ffddf4;
   margin: 10px;
