--- a/src/app/@compoment/api-demo3/api-demo3.component.scss
+++ b/src/app/@compoment/api-demo3/api-demo3.component.scss
@@ -19,11 +19,12 @@
   background-size: cover;
   align-content:center;
   padding:0 25%;
+  font-weight:bold;
 
 }
 
 .cardContent{
-  border: 2px solid #000;
+  border: 2px solid #ffffff;
   min-width: 30%;
   margin: 5px;
   padding: 5px;
@@ -32,6 +33,7 @@
   text-align: center;
   align-content:center;
   border-radius: 10px;
+
 }
 .cardContent:hover{
   transform: scale(1.1);
@@ -46,7 +48,10 @@
   width: 5%;
   height: 3%;
 }
-
+.btn1:hover{
+  transform: scale(1.2);
+  transition: 0.3s ease 0s;
+}
 .block1{
 
 margin-left: 10%;
